# weeny

./: .gitignore  CMakeLists.txt
include/: WApplication.h  WDebug.h  WRenderer.h  WSingleton.h  application.h  basicnodes.h  cache.h  debug.h  hierarchy.h  program.h  signal.h  singleton.h  texture.h  types.h  universe.h  visualiser.h  weeny.h  widget.h
include/base/: cache.h  signal.h  singleton.h
include/graphics/OpenGL/: checkerror.h
include/universe/: camera.h  drawnode.h  layer.h  mesh.h  node.h  spectator.h  universe.h
src/: WApplication.cpp  WDebug.cpp  application.cpp  basicnodes.cpp  debug.cpp  signal.cpp  universe.cpp
src/base/: debug.cpp  signal.cpp
src/graphics/OpenGL/: WRenderer.cpp  program.cpp  texture.cpp  visualiser.cpp  widget.cpp
src/universe/: camera.cpp  drawnode.cpp  layer.cpp  mesh.cpp  node.cpp  spectator.cpp  universe.cpp
tools/newproject/: Makefile
tools/newproject/identicons/: identicon.js
tools/newproject/templates/simple/: CMakeLists.txt  Makefile  README
tools/newproject/templates/simple/src/: main.cpp
tools/newproject/templates/simple/targets/ANDROID/cmake/: AndroidManifest.xml  ant.properties
tools/newproject/templates/simple/targets/ANDROID/keystore/: release-key
tools/newproject/templates/simple/targets/IOS/cmake/: MacOSXBundleInfo.plist.in
